--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantBP4_Avionics_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantBP4_Avionics_09375.cfg
@@ -111,8 +111,6 @@ PART
 			name = White
 			displayName = White
 			primaryColor = #ffffff
-			secondaryColor = #ffffff
-			sizeGroup = GroupB
 			GAMEOBJECTS
 			{
 				Brown = false			
@@ -124,13 +122,43 @@ PART
 			name = Brown
 			displayName= Brown
 			primaryColor = #835c34
-			secondaryColor = #835c34
-			sizeGroup = GroupA
 			GAMEOBJECTS
 			{
 				Brown = true			
 				White = false
 			}
-		}				
+		}
+		VARIANT
+		{
+			name = Black
+			displayName= Black
+			primaryColor = #333333
+			GAMEOBJECTS
+			{
+				Brown = false			
+				White = true
+			}
+			TEXTURE
+			{
+				materialName = Diamant_Structural
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_Structural_Black
+			}
+		}	
+		VARIANT
+		{
+			name = Cream
+			displayName= Cream
+			primaryColor = #8b7346
+			GAMEOBJECTS
+			{
+				Brown = true			
+				White = false
+			}
+			TEXTURE
+			{
+				materialName = Diamant_Structural
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_Structural_Black
+			}
+		}			
 	}	
 }
