--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_FuelTank_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_FuelTank_09375.cfg
@@ -64,4 +64,27 @@ PART
 		name = FlagDecal
 		textureQuadName = flagTransform
 	}	
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+			TEXTURE
+			{
+				materialName = Diamant_generic_2
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_2_Black
+			}
+			TEXTURE
+			{
+				materialName = Diamant_generic_5
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_5_Black
+			}			
+		}
+	}	
 }
