--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Decoupler_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Decoupler_09375.cfg
@@ -66,4 +66,22 @@ PART
 		toggleEditor = true
 		toggleFlight = true
 	}
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+			TEXTURE
+			{
+				materialName = Diamant_Structural
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_Structural_Black
+			}
+		}
+	}	
 }
