--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_NoseCone_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_NoseCone_09375.cfg
@@ -42,5 +42,27 @@ PART
 	thermalMassModifier = 6.0
 	emissiveConstant = 0.95
 	tags = knes Diomede Diamant aero hat nose cone aircraft booster )cap drag fligh plane rocket stab stream tail
-
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+			TEXTURE
+			{
+				materialName = Diamant_generic_1
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_1_Black
+			}
+			TEXTURE
+			{
+				materialName = Diamant_generic_6
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_6_Black
+			}			
+		}
+	}
 }
