--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_H2_Engine_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_H2_Engine_09375.cfg
@@ -223,7 +223,43 @@ PART
 				support_tuyere_000 = true			
 			}			
 		
-		}	
+		}
+		VARIANT
+		{
+			name = Black Shroud
+			displayName = Black Shroud
+			primaryColor = #ffffff
+			secondaryColor = #333333
+			sizeGroup = GroupB
+			GAMEOBJECTS
+			{
+				BareCollider = false
+				Baresupport = false
+				Collider = true
+				Collider2 = true			
+				H2_001 = true
+				H3_001 = true
+				P10 = true
+				support = true
+				support_001 = true			
+				support_tuyere_000 = true			
+			}			
+			TEXTURE
+			{
+				materialName = Diamant_generic_6
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_6_Black
+			}
+			TEXTURE
+			{
+				materialName = Diamant_generic_4
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_4_Black
+			}
+			TEXTURE
+			{
+				materialName = Diamant_generic_2
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_2_Black
+			}	
+		}			
 		VARIANT
 		{
 			name = Bare
