--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_H3_Engine_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_H3_Engine_0625.cfg
@@ -223,7 +223,38 @@ PART
 				tuyere = true				
 			}			
 		
-		}	
+		}
+		VARIANT
+		{
+			name = Black Shroud
+			displayName = Black Shroud
+			primaryColor = #ffffff
+			secondaryColor = #333333
+			sizeGroup = GroupB
+			GAMEOBJECTS
+			{
+				BareMount = false
+				Collider = true
+				Collider2 = true
+				ColliderBare = false			
+				EndCap = true
+				Fuel_line_000 = true
+				Shroud = true
+				support = true
+				support_tuyere_001 = true			
+				tuyere = true				
+			}			
+			TEXTURE
+			{
+				materialName = Diamant_generic_6
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_6_Black
+			}
+			TEXTURE
+			{
+				materialName = Diamant_generic_2
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_2_Black
+			}		
+		}		
 		VARIANT
 		{
 			name = Bare
