--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_RCS_Bump_roll.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_RCS_Bump_roll.cfg
@@ -97,5 +97,23 @@ PART
 		name = MonoPropellant
 		amount = 4
 		maxAmount = 4
-	}	
+	}
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+			TEXTURE
+			{
+				materialName = Diamant_generic_4
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_4_Black
+			}		
+		}
+	}		
 }
