--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_Booster_P10_9375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_Booster_P10_9375.cfg
@@ -249,5 +249,27 @@ PART
             key = 1 1
         }
     }
-	
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+			TEXTURE
+			{
+				materialName = Diamant_generic_1
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_1_Black
+			}
+			TEXTURE
+			{
+				materialName = Diamant_generic_6
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_6_Black
+			}			
+		}
+	}
 }
