--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_FuelTank_Long_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_FuelTank_Long_0625.cfg
@@ -53,4 +53,27 @@ PART
 		amount = 55
 		maxAmount = 55
 	}
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+			TEXTURE
+			{
+				materialName = Diamant_generic_3
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_3_Black
+			}
+			TEXTURE
+			{
+				materialName = Diamant_generic_2
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_2_Black
+			}			
+		}
+	}	
 }
