--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantBP4_Booster_Rita_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantBP4_Booster_Rita_09375.cfg
@@ -228,5 +228,28 @@ PART
             key = 0 0
             key = 1 1
         }
-    }		
+    }	
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+			TEXTURE
+			{
+				materialName = Diamant_generic_1
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_1_Black
+			}
+			TEXTURE
+			{
+				materialName = Diamant_generic_5
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_5_Black
+			}			
+		}
+	}	
 }
