--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_Avionics_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_DiamantB_Avionics_0625.cfg
@@ -180,4 +180,27 @@ PART
 			key = 4 0.001
 		}
 	}	
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+			TEXTURE
+			{
+				materialName = Diamant_generic_4
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_4_Black
+			}
+			TEXTURE
+			{
+				materialName = Diamant_generic_1
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_1_Black
+			}			
+		}
+	}	
 }
