--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron.cfg
@@ -53,4 +53,22 @@ PART
 //		dragAtMaxAoA = 0.10
 //		dragAtMinAoA = 0.00
 	}
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+			TEXTURE
+			{
+				materialName = Diamant_generic_1
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_1_Black
+			}
+		}
+	}	
 }
