--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_RCS_Bump_tank.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_RCS_Bump_tank.cfg
@@ -52,4 +52,22 @@ PART
 		amount = 5
 		maxAmount = 5
 	}	
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+			TEXTURE
+			{
+				materialName = Diamant_generic_4
+				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_4_Black
+			}		
+		}
+	}		
 }
