--- a/GameData/Knes/Parts/Core/Decouplers/_Knes_Decoupler_Radial_Small.cfg
+++ b/GameData/Knes/Parts/Core/Decouplers/_Knes_Decoupler_Radial_Small.cfg
@@ -15,8 +15,8 @@ PART
 	
 	scale = 1
 	rescaleFactor = 1
-	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0
-	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, decouple
+	node_attach = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0
+	fx_gasBurst_white = 0.0, 0.0, -0.0826454, -1.0, 0.0, 0.0, decouple
 	sound_vent_large = decouple
 	TechRequired = engineering101
 	entryCost = 1200
@@ -46,7 +46,6 @@ PART
 		name = ModuleAnchoredDecoupler
 		anchorName = anchor
 		ejectionForce = 200
-		explosiveDir = 0, 0, -1
 		explosiveNodeID = srf
 	}
 	
