A6 Nose cone variant

--- a/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Aero_NoseCone_A.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Aero_NoseCone_A.cfg
@@ -44,5 +44,37 @@ PART
 	thermalMassModifier = 6.0
 	emissiveConstant = 0.95
 	tags = knes aero aircraft booster )cap drag fligh plane rocket stab stream tail
-
+	MODULE
+	{
+		name = ModulePartVariants
+		baseVariant = A5
+		VARIANT
+		{
+			name = A5
+			displayName = A5
+			primaryColor = #ffffff
+			secondaryColor = #999999
+			GAMEOBJECTS
+			{
+				Ariane5Cone = true
+				_ColliderA5 = true
+				Ariane6Cone = false
+				_ColliderA6 = false
+			}			
+		}	
+		VARIANT
+		{
+			name = A6
+			displayName =  A6
+			primaryColor = #d96200
+			secondaryColor = #999999	
+			GAMEOBJECTS
+			{
+				Ariane5Cone = false
+				_ColliderA5 = false
+				Ariane6Cone = true
+				_ColliderA6 = true
+			}				
+		}		
+	}	
 }
