Fix Typo error "Mass" MRK

--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Pod.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Pod.cfg
@@ -54,7 +54,7 @@
 
 // --- Standard Parameters ---
 
-	Mass = 4.564 //4.564 tonnes  
+	mass = 3
 	dragModelType = default
 	maximum_drag = 0.20 // as per stock mk1-2 Pod
 	minimum_drag = 0.15 // as per stock mk1-2 pod
