Fix RCS on Star Rider & Star Watcher

--- a/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Pod_StarRider.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Pod_StarRider.cfg
@@ -158,15 +158,14 @@ PART
 	MODULE
 	{
 		name = ModuleDataTransmitter
-		antennaType = INTERNAL
-		packetInterval = 1.0
+		antennaType = DIRECT
+		packetInterval = 0.6
 		packetSize = 2
 		packetResourceCost = 12.0
 		requiredResource = ElectricCharge
-		antennaPower = 5000
-		optimumRange = 2500
-		packetFloor = .1
-		packetCeiling = 5
+		antennaPower = 500000
+		antennaCombinable = True
+		antennaCombinableExponent = 1
 	}
 	EFFECTS
 	{
@@ -188,7 +187,7 @@ PART
 			MODEL_MULTI_PARTICLE
 			{
 				modelName = Squad/FX/Monoprop_small
-				transformName = RCSfx
+				transformName = RCS
 				emission = 0.0 0.0
 				emission = 0.1 0.0
 				emission = 1.0 1.0
