--- a/GameData/Knes/Parts/LiftingsBodies/StarWatcher/_Knes_Pod_StarWatcher.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/StarWatcher/_Knes_Pod_StarWatcher.cfg
@@ -195,7 +195,7 @@ PART
 			MODEL_MULTI_PARTICLE
 			{
 				modelName = Squad/FX/Monoprop_small
-				transformName = RCSfx
+				transformName = RCS
 				emission = 0.0 0.0
 				emission = 0.1 0.0
 				emission = 1.0 1.0
