--- a/GameData/Knes/Parts/Core/Antenna/_Knes_DirectAntenna_bread.cfg
+++ b/GameData/Knes/Parts/Core/Antenna/_Knes_DirectAntenna_bread.cfg
@@ -67,7 +67,7 @@ PART
 		packetResourceCost = 12.0
 		requiredResource = ElectricCharge
 		DeployFxModules = 0
-		antennaPower = 5000000
+		antennaPower = 150000
 		antennaCombinable = True
 		antennaCombinableExponent = 1
 	}
