--- a/GameData/Knes/Compatibility/Kerbal Inventory System (KIS)/Knes_KIS.cfg
+++ b/GameData/Knes/Compatibility/Kerbal Inventory System (KIS)/Knes_KIS.cfg
@@ -4,11 +4,11 @@
 		%MODULE[ModuleKISInventory]	
 		{
 			name = ModuleKISInventory
-			maxVolume = 14000
+			maxVolume = 1000
 			externalAccess = true
 			internalAccess = true
-			slotsX = 8
-			slotsY = 5
+			slotsX = 4
+			slotsY = 4
 			slotSize = 50
 			itemIconResolution = 128
 			selfIconResolution = 128
@@ -50,7 +50,7 @@
 		%MODULE[ModuleKISInventory]	
 		{
 			name = ModuleKISInventory
-			maxVolume = 14000
+			maxVolume = 8000
 			externalAccess = true
 			internalAccess = true
 			slotsX = 8
@@ -90,4 +90,28 @@
 		}
 
 	}
-
+	@PART[_Knes_ATV_Cargo]:NEEDS[KIS]
+	{
+		%MODULE[ModuleKISInventory]	
+		{
+			name = ModuleKISInventory
+			maxVolume = 8000
+			externalAccess = true
+			internalAccess = true
+			slotsX = 8
+			slotsY = 5
+			slotSize = 50
+			itemIconResolution = 128
+			selfIconResolution = 128
+			openSndPath = KIS/Sounds/containerOpen
+			closeSndPath = KIS/Sounds/containerClose
+			defaultMoveSndPath = KIS/Sounds/itemMove
+		}
+		
+		%MODULE[ModuleKISItem]
+		{
+			volumeOverride = 4000
+			editorItemsCategory = false
+		}	
+		
+	}
