--- a/GameData/Knes/Parts/ATV/_Knes_ATV_Adapter.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_Adapter.cfg
@@ -13,18 +13,21 @@ PART
 		model = Knes/Parts/Core/ENDCAPS/end_crew_s0
 		scale = 1.0, 1.0, 1.0
 		position = 0.0, 0.4819, 0.0
+		name = end_crew_s0		
 	}
     MODEL
 	{
 		model = Knes/Parts/Core/ENDCAPS/end_crew_s0p5
 		scale = 1.0, 1.0, 1.0
 		position = 0.0, 0.262256, 0.0
+		name = end_crew_s0p5			
 	}	
     MODEL
 	{
 		model = Knes/Parts/Core/ENDCAPS/end_crew_s1
 		scale = 1.0, 1.0, 1.0
 		position = 0.0, -0.005468, 0.0
+		name = end_crew_s1			
 	}
     MODEL
 	{
@@ -38,6 +41,7 @@ PART
 		model = Knes/Parts/Core/ENDCAPS/end_crew_s2_s1
 		scale = 1.0, -1.0, 1.0
 		position = 0.0, -0.36236, 0.0
+		name = end_crew_s2_s1			
 	}
 	
 	rescaleFactor = 1
@@ -47,9 +51,9 @@ PART
 
 		
 	TechRequired = commandModules
-	entryCost = 5500
-	cost = 1850
-	category = Structural
+	entryCost = 1500
+	cost = 550
+	category     = Pods
 	subcategory = 0
 	title = ATV Nose Adapter
 	manufacturer = Knes
@@ -58,7 +62,7 @@ PART
 	stackSymmetry = 1
 
 	// --- Std Parameters ---
-	mass = 1.5
+	mass = 0.5
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.15
@@ -67,16 +71,67 @@ PART
 	maxTemp = 1500
 	bulkheadProfiles = 2
 	tags =  ATV Knes
+	vesselType = Probe
+	PhysicsSignificance = 1	
 	
 	// --- Resources ---
 
+	MODULE
+	{
+		name = ModuleCommand
+		minimumCrew = 0
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.01
+		}
+		hasHibernation = True
+	}
+	
+	MODULE
+	{
+		name = ModuleReactionWheel
+		PitchTorque = 4
+		YawTorque = 4
+		RollTorque = 4
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.002
+		}
+	}	
+	
+	MODULE
+	{
+		name = ModuleDataTransmitter
+		antennaType = DIRECT
+		packetInterval = 0.6
+		packetSize = 2
+		packetResourceCost = 8.0
+		requiredResource = ElectricCharge
+		antennaPower = 500000
+		antennaCombinable = False
+	}
+
+	MODULE
+	{
+		name = ModuleSAS
+		SASServiceLevel = 3
+	}
+
+	
 	RESOURCE
 	{
 		name = ElectricCharge
-		amount = 100
-		maxAmount = 100
+		amount = 200.0
+		maxAmount = 200.0
 	}
-
+	RESOURCE
+	{
+		name = MonoPropellant
+		amount = 5
+		maxAmount = 5
+	}
 	MODULE
 	{
 		name = ModulePartVariants
@@ -87,6 +142,8 @@ PART
 			displayName = 2.5 to 0.625
 			primaryColor = #ffffff
 			secondaryColor = #999999
+			cost = 250
+			mass = 0.3				
 			GAMEOBJECTS
 			{
 				Bottom_Adapter = true			
@@ -111,6 +168,8 @@ PART
 			displayName =  2.5 to 0.9375
 			primaryColor = #d96200
 			secondaryColor = #999999
+			cost = 200
+			mass = 0.25				
 			GAMEOBJECTS
 			{
 				Bottom_Adapter = true			
@@ -138,6 +197,8 @@ PART
 			displayName =  2.5 to 1.25
 			primaryColor = #d96200
 			secondaryColor = #999999
+			cost = 150
+			mass = 0.2				
 			GAMEOBJECTS
 			{
 				Bottom_Adapter = true			
@@ -161,10 +222,12 @@ PART
 		}	
 		VARIANT
 		{
-			name = 1.5 to 0.625
-			displayName =  1.5 to 0.625
+			name = 1.25 to 0.625
+			displayName =  1.25 to 0.625
 			primaryColor = #d96200
 			secondaryColor = #999999
+			cost = 100
+			mass = 0.15			
 			GAMEOBJECTS
 			{
 				Bottom_Adapter = false			
@@ -189,10 +252,12 @@ PART
 		}
 		VARIANT
 		{
-			name = 1.5 to 0.9375
-			displayName =  1.5 to 0.9375
+			name = 1.25 to 0.9375
+			displayName =  1.25 to 0.9375
 			primaryColor = #d96200
 			secondaryColor = #999999
+			cost = 50
+			mass = 0.1			
 			GAMEOBJECTS
 			{
 				Bottom_Adapter = false
