Pathfinder patch fix

--- a/GameData/Knes/Compatibility/Pathfinder/Knes_Pathfinder.cfg
+++ b/GameData/Knes/Compatibility/Pathfinder/Knes_Pathfinder.cfg
@@ -76,7 +76,7 @@
 		templateNodes = STORAGE_TEMPLATE
 		
 		capacityFactor = 1
-		resourcesToKeep = ElectricCharge;Ablator;MonoPropellant;Food;Water;Oxygen;CarbonDioxide;Waste;WasteWater;Mulch;Supplies;Snacks;
+		resourcesToKeep = ElectricCharge;Ablator;MonoPropellant;Food;Water;Oxygen;CarbonDioxide;Waste;WasteWater;Mulch;Supplies;Snacks;Crystal
 		
 		logoPanelTransforms = 
 		decalsVisible = false
