Fixing the bulkheadProfiles from some parts

--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SM_Cargo.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SM_Cargo.cfg
@@ -51,7 +51,7 @@ minimum_drag = 0.15
 angularDrag = 2
 crashTolerance = 10
 maxTemp = 1400
-bulkheadProfiles = 2
+bulkheadProfiles = size2
 tags =  MRK Knes
 
 // --- Seperation Rockets ----
