--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SM_Rescue.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SM_Rescue.cfg
@@ -46,7 +46,7 @@ PART
 	angularDrag = 2
 	crashTolerance = 10
 	maxTemp = 1400
-	bulkheadProfiles = 2
+	bulkheadProfiles = size2
 	tags =  MRK Knes
 
 	// --- Seperation Rockets ----
