--- a/GameData/Knes/Parts/ATV/_Knes_ATV_Adapter.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_Adapter.cfg
@@ -53,7 +53,7 @@ PART
 	TechRequired = commandModules
 	entryCost = 1500
 	cost = 550
-	category     = Pods
+	category = Pods
 	subcategory = 0
 	title = ATV Nose Adapter
 	manufacturer = Knes
@@ -69,7 +69,7 @@ PART
 	angularDrag = 2
 	crashTolerance = 10
 	maxTemp = 1500
-	bulkheadProfiles = 2
+	bulkheadProfiles = size2
 	tags =  ATV Knes
 	vesselType = Probe
 	PhysicsSignificance = 1	
