--- a/GameData/Knes/Parts/ATV/_Knes_ATV_Cargo.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_Cargo.cfg
@@ -45,7 +45,7 @@ PART
 	angularDrag = 2
 	crashTolerance = 10
 	maxTemp = 1400
-	bulkheadProfiles = 2
+	bulkheadProfiles = size2
 	tags =  ATV Knes
 	vesselType = Ship
 	CrewCapacity = 2	
