--- a/GameData/Knes/Parts/ATV/_Knes_ATV_SM.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_SM.cfg
@@ -39,7 +39,7 @@ PART
 	angularDrag = 2
 	crashTolerance = 10
 	maxTemp = 1400
-	bulkheadProfiles = 2
+	bulkheadProfiles = size2
 	tags =  ATV Knes
 	vesselType = Ship
 	
