--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SM_Extended.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SM_Extended.cfg
@@ -50,7 +50,7 @@ PART
 	angularDrag = 2
 	crashTolerance = 10
 	maxTemp = 1400
-	bulkheadProfiles = 2
+	bulkheadProfiles = size2
 	tags =  MRK Knes
 
 // --- Seperation Rockets ----
