--- a/GameData/Knes/Parts/ATV/_Knes_ATV_Adapter.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_Adapter.cfg
@@ -50,10 +50,10 @@ PART
 	node_stack_bottom = 0.0, -0.36236, 0.0, 0, -1, 0, 1	
 
 		
-	TechRequired = commandModules
+	TechRequired = miniaturization
 	entryCost = 1500
 	cost = 550
-	category = Pods
+	category     = Structural
 	subcategory = 0
 	title = ATV Nose Adapter
 	manufacturer = Knes
@@ -71,8 +71,6 @@ PART
 	maxTemp = 1500
 	bulkheadProfiles = size2
 	tags =  ATV Knes
-	vesselType = Probe
-	PhysicsSignificance = 1	
 	
 	// --- Resources ---
 
