--- a/GameData/Knes/Parts/ATV/_Knes_ATV_SM.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_SM.cfg
@@ -126,7 +126,7 @@ PART
 			}
 			MODEL_MULTI_PARTICLE
 			{
-				modelName = Squad/FX/Monoprop_small
+				modelName = Squad/FX/Monoprop_big
 				transformName = thrustTransform
 				emission = 0.0 0.0
 				emission = 0.4 0.005
@@ -198,8 +198,8 @@ PART
 	RESOURCE
 	{
 		name = MonoPropellant
-		amount = 250
-		maxAmount = 250
+		amount = 550
+		maxAmount = 550
 	}
 	RESOURCE
 	{
@@ -207,17 +207,5 @@ PART
 		amount = 250
 		maxAmount = 250
 	}
-	RESOURCE
-	{
-		name = LiquidFuel
-		amount = 99
-		maxAmount = 99
-	}
-	RESOURCE
-	{
-		name = Oxidizer
-		amount = 121
-		maxAmount = 121
-	}	
 
 }
