--- a/GameData/Knes/Parts/ATV/_Knes_ATV_Adapter.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_Adapter.cfg
@@ -10,35 +10,35 @@ PART
 	}
     MODEL
 	{
-		model = Knes/Parts/Core/ENDCAPS/end_crew_s0
+		model = Knes/Parts/Core/EndCap/Knes_end_crew_s0
 		scale = 1.0, 1.0, 1.0
 		position = 0.0, 0.4819, 0.0
 		name = end_crew_s0		
 	}
     MODEL
 	{
-		model = Knes/Parts/Core/ENDCAPS/end_crew_s0p5
+		model = Knes/Parts/Core/EndCap/Knes_end_crew_s0p5
 		scale = 1.0, 1.0, 1.0
 		position = 0.0, 0.262256, 0.0
 		name = end_crew_s0p5			
 	}	
     MODEL
 	{
-		model = Knes/Parts/Core/ENDCAPS/end_crew_s1
+		model = Knes/Parts/Core/EndCap/Knes_end_crew_s1
 		scale = 1.0, 1.0, 1.0
 		position = 0.0, -0.005468, 0.0
 		name = end_crew_s1			
 	}
     MODEL
 	{
-		model = Knes/Parts/Core/ENDCAPS/end_crew_s1
+		model = Knes/Parts/Core/EndCap/Knes_end_crew_s1
 		scale = 1.0, -1.0, 1.0
 		position = 0.0, -0.005468, 0.0
 		name = end_crew_s1_bottom
 	}	
 	MODEL
 	{
-		model = Knes/Parts/Core/ENDCAPS/end_crew_s2_s1
+		model = Knes/Parts/Core/EndCap/Knes_end_crew_s2_2
 		scale = 1.0, -1.0, 1.0
 		position = 0.0, -0.36236, 0.0
 		name = end_crew_s2_s1			
@@ -53,11 +53,11 @@ PART
 	TechRequired = miniaturization
 	entryCost = 1500
 	cost = 550
-	category     = Structural
+	category = Structural
 	subcategory = 0
-	title = ATV Nose Adapter
+	title = ATV "Lemaitre" Nose Adapter
 	manufacturer = Knes
-	description = 
+	description = A modular structural adapter in various sizes.
 	attachRules = 1,0,1,1,0
 	stackSymmetry = 1
 
@@ -74,6 +74,42 @@ PART
 	
 	// --- Resources ---
 
+    MODULE
+    {
+        name = ModuleColorChanger
+        shaderProperty = _EmissiveColor
+        animRate = 0.8
+        animState = false
+        useRate = true
+        toggleInEditor = true
+        toggleInFlight = true
+        toggleInFlight = true
+        unfocusedRange = 5
+        toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+        eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+        eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+        toggleAction = True
+        defaultActionGroup = Light
+        redCurve
+        {
+            key = 0 0 0 3
+            key = 1 1 0 0
+        }
+        greenCurve
+        {
+            key = 0 0 0 1
+            key = 1 1 1 0
+        }
+        blueCurve
+        {
+            key = 0 0 0 0
+            key = 1 0.7 1.5 0
+        }
+        alphaCurve
+        {
+            key = 0 1
+        }
+    }
 	
 	RESOURCE
 	{
