--- a/GameData/Knes/Parts/ATV/_Knes_ATV_Antenna.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_Antenna.cfg
@@ -24,11 +24,11 @@ PART
 	cost = 125
 	category = Communication
 	subcategory = 0
-	title = ATV Antenna
+	title = ATV "Leproux" Antenna
 	manufacturer = Knes
 	description = A powerful antenna for your spacecraft
 	
-	tags = Knes aerial antenna radio signal transmi srf
+	tags = Knes aerial antenna radio signal transmi srf ATV
 	
 	mass = 0.01
 
