--- a/GameData/Knes/Parts/ATV/_Knes_ATV_SolarPanel.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_SolarPanel.cfg
@@ -21,7 +21,7 @@ PART
 	category = Electrical
 	subcategory = 0
 	mass = 0.04
-	title = ATV Solar Panel
+	title = ATV "Einstein" Solar Panel
 	manufacturer = Knes
 	description = ATV Solar Panel
 	dragModelType = default
