--- a/GameData/Knes/Parts/ATV/_Knes_ATV_Cargo.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_Cargo.cfg
@@ -10,13 +10,13 @@ PART
 	}
     MODEL
 	{
-		model = Knes/Parts/Core/ENDCAPS/end_crew_s2_s1
+		model = Knes/Parts/Core/EndCap/Knes_end_crew_s2_2
 		scale = 1.0, 1.0, 1.0
 		position = 0.0, 0.875, 0.0
 	}
 	MODEL
 	{
-		model = Knes/Parts/Core/ENDCAPS/end_crew_s2_s1
+		model = Knes/Parts/Core/EndCap/Knes_end_crew_s2_2
 		scale = 1.0, -1.0, 1.0
 		position = 0.0, -0.875, 0.0
 	}
@@ -31,9 +31,9 @@ PART
 	cost = 1850
 	category = Utility
 	subcategory = 0
-	title = ATV Pressurised Module
+	title = ATV "Amaldi" Pressurised Module
 	manufacturer = Knes
-	description = 
+	description = ATV Pressurised Module can deliver dry cargo, water, compressed gases and propellant to a space station.
 	attachRules = 1,0,1,1,0
 	stackSymmetry = 1
 
@@ -54,6 +54,42 @@ PART
 	{
 		name = crewCabinInternals
 	}
+    MODULE
+    {
+        name = ModuleColorChanger
+        shaderProperty = _EmissiveColor
+        animRate = 0.8
+        animState = false
+        useRate = true
+        toggleInEditor = true
+        toggleInFlight = true
+        toggleInFlight = true
+        unfocusedRange = 5
+        toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+        eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+        eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+        toggleAction = True
+        defaultActionGroup = Light
+        redCurve
+        {
+            key = 0 0 0 3
+            key = 1 1 0 0
+        }
+        greenCurve
+        {
+            key = 0 0 0 1
+            key = 1 1 1 0
+        }
+        blueCurve
+        {
+            key = 0 0 0 0
+            key = 1 0.7 1.5 0
+        }
+        alphaCurve
+        {
+            key = 0 1
+        }
+    }
 	
 	// --- Resources ---
 
