--- a/GameData/Knes/Parts/ATV/_Knes_ATV_RCS_A.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_RCS_A.cfg
@@ -21,7 +21,7 @@ PART
 	cost = 35
 	category = Control
 	subcategory = 0
-	title = ATV_RCS_A
+	title = ATV "Bottlaender" Front RCS
 	manufacturer = Knes
 	description = The recent discovery of a third law of physics made it possible for Luciole Space Systems Corps engineers to produce these small monopropellant thrusters, to help with attitude control and linear motion. Even though many Kerbal physicists still dispute the validity of this new law, studies show that the thrusters seem to work as advertised.
 	attachRules = 0,1,0,0,0
@@ -34,7 +34,7 @@ PART
 	maxTemp = 1600
 	PhysicsSignificance = 1
 	bulkheadProfiles = srf
-	tags = #autoLOC_500941 //#autoLOC_500941 = cluster control dock maneuver manoeuvre react rendezvous rotate stab steer translate
+	tags = ATV Knes cluster control dock maneuver manoeuvre react rendezvous rotate stab steer translate
 	
 	EFFECTS
 	{
