--- a/GameData/Knes/Parts/ATV/_Knes_ATV_SM.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_SM.cfg
@@ -10,7 +10,7 @@ PART
 	}
     MODEL
 	{
-		model = Knes/Parts/Core/ENDCAPS/end_crew_s2_s1
+		model = Knes/Parts/Core/EndCap/Knes_end_crew_s2_2
 		scale = 1.0, 1.0, 1.0
 		position = 0.0, 1.17217, 0.0
 	}
@@ -26,9 +26,9 @@ PART
 	cost = 1850
 	category = Utility
 	subcategory = 0
-	title = ATV Service Module
+	title = ATV "Verne" Service Module
 	manufacturer = Knes
-	description = 
+	description = ATV "Verne" is a fully operationnal vehicle itself, capable of performing space station reboosts.
 	attachRules = 1,0,1,1,0
 
 	// --- Std Parameters ---
@@ -42,6 +42,43 @@ PART
 	bulkheadProfiles = size2
 	tags =  ATV Knes
 	vesselType = Ship
+
+    MODULE
+    {
+        name = ModuleColorChanger
+        shaderProperty = _EmissiveColor
+        animRate = 0.8
+        animState = false
+        useRate = true
+        toggleInEditor = true
+        toggleInFlight = true
+        toggleInFlight = true
+        unfocusedRange = 5
+        toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+        eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+        eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+        toggleAction = True
+        defaultActionGroup = Light
+        redCurve
+        {
+            key = 0 0 0 3
+            key = 1 1 0 0
+        }
+        greenCurve
+        {
+            key = 0 0 0 1
+            key = 1 1 1 0
+        }
+        blueCurve
+        {
+            key = 0 0 0 0
+            key = 1 0.7 1.5 0
+        }
+        alphaCurve
+        {
+            key = 0 1
+        }
+    }
 	
 	MODULE
 	{
