Missing bulkhead profiles

--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_ECBM.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_ECBM.cfg
@@ -43,6 +43,7 @@ breakingTorque = 200
 maxTemp = 2000 // =3400
 fuelCrossFeed = True
 stagingIcon = DECOUPLER_VERT
+bulkheadProfiles = size1
 tags = ISS CxA CBM docking MRK enhanced Knes
 
 	MODULE
