--- a/GameData/Knes/Parts/ATV/_Knes_ATV_Adapter.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_Adapter.cfg
@@ -32,8 +32,9 @@ PART
     MODEL
 	{
 		model = Knes/Parts/Core/EndCap/Knes_end_crew_s1
-		scale = 1.0, -1.0, 1.0
+		scale = 1.0, 1.0, 1.0
 		position = 0.0, -0.005468, 0.0
+		rotation = 180, 0, 0		
 		name = end_crew_s1_bottom
 	}	
 	MODEL
@@ -71,7 +72,7 @@ PART
 	maxTemp = 1500
 	bulkheadProfiles = size2
 	tags =  ATV Knes
-	
+
 	// --- Resources ---
 
     MODULE
