Adding TweakScale support for new parts as 2020-0623

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-ATV_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-ATV_TweakScale.cfg
@@ -40,6 +40,15 @@
 	}
 }
 
+@PART[_Knes_ATV_Flat_Adapter]:NEEDS[TweakScale]:FOR[Knes] // ATV "Davinci" Adapter
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
 @PART[_Knes_ATV_RCS_A]:NEEDS[TweakScale]:FOR[Knes] // ATV "Bottlaender" Front RCS
 {
 	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
@@ -75,4 +84,14 @@
 		defaultScale = 0.625
 	}
 }
+
+@PART[_Knes_STEAM_ScienceLab]:NEEDS[TweakScale]:FOR[Knes] // STEAM "Calypso" ScienceLab Module
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 2.5
+	}
+}
+
 
