Adjustments on some parts' patches.

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-ATV_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-ATV_TweakScale.cfg
@@ -69,6 +69,7 @@
 
 @PART[_Knes_ATV_SM]:NEEDS[TweakScale]:FOR[Knes] // ATV "Verne" Service Module
 {
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
 	{
 		type = stack
