--- a/GameData/Knes/Compatibility/Tweakscale/Knes-Core_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-Core_TweakScale.cfg
@@ -65,7 +65,7 @@
 @PART[Knes_Utility_SafeSystem]:NEEDS[TweakScale]:FOR[Knes] // SafeSystem 1.875 / 2.5 Abort Adapter
 {
 	// This thing is also an Decouler, but we can't shove two behaviours on the same part!
-	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
 	{
 		type = stack
@@ -76,7 +76,7 @@
 @PART[Knes_Utility_SafeSystem_1875]:NEEDS[TweakScale]:FOR[Knes] // SafeSystem 1.875 / 1.25 Abort Adapter
 {
 	// This thing is also an Decouler, but we can't shove two behaviours on the same part!
-	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
 	{
 		type = stack
