--- a/GameData/Knes/Compatibility/Tweakscale/Knes-LiftingBodies_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-LiftingBodies_TweakScale.cfg
@@ -18,6 +18,7 @@
 
 @PART[Knes_Command_K-IXV]:NEEDS[TweakScale]:FOR[Knes] //K-IXV "StarRider" Command Pod
 {
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
 	{
 		type = stack_square
