--- a/GameData/Knes/Compatibility/Tweakscale/Knes-SpacePlane_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-SpacePlane_TweakScale.cfg
@@ -35,6 +35,7 @@
 
 @PART[Knes_Hermes]:NEEDS[TweakScale]:FOR[Knes] // Hermes Space Shuttle
 {
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
 	{
 		type = stack
@@ -86,6 +87,7 @@
 
 @PART[Knes_Hermes_HRM]:NEEDS[TweakScale]:FOR[Knes] // Hermes Resource Module HRM
 {
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
 	{
 		type = stack
