--- a/GameData/Knes/Compatibility/Tweakscale/Knes-Spacecraft_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-Spacecraft_TweakScale.cfg
@@ -25,7 +25,7 @@
 
 @PART[_Knes_Control_LowProfile_RCS_0625]:NEEDS[TweakScale]:FOR[Knes] // RCS "Hachimaki" Control Unit
 {
-	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
 	{
 		type = stack
@@ -65,7 +65,7 @@
 {
 	%MODULE[TweakScale]
 	{
-		type = stack
+		type = stack_square
 		defaultScale = 0.9375
 	}
 }
@@ -101,13 +101,14 @@
 {
 	%MODULE[TweakScale]
 	{
-		type = stack
+		type = stack_square
 		defaultScale = 0.625
 	}
 }
 
 @PART[Knes_Service_Module_Viking_09375]:NEEDS[TweakScale]:FOR[Knes] // C-09 "Viking" Service Module
 {
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
 	{
 		type = stack
