Adding patched for Launcher/Diamant

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-Launcher_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-Launcher_TweakScale.cfg
@@ -131,3 +131,269 @@
 }
 
 // Knes_Structural_Struts (Ariane Strut Connector) does not scale
+
+
+// ** Diamant *
+
+@PART[_Knes_Booster_P03]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Hector" P03 Booster
+{
+	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = free
+	}
+}
+
+@PART[_Knes_Diamant2_Booster_P10_9375]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Dumby" P10 Booster
+{
+	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+@PART[_Knes_Diamant2_Booster_P16_9375]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Chunky" P16 Booster
+{
+	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+@PART[_Knes_Diamant2_Booster_Rita2_9375]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Stocky" P6 Booster
+{
+	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+@PART[_Knes_Diamant2_FuelTank_Long_0625]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "TinyBoi" Fuel Tank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.625
+	}
+}
+
+@PART[_Knes_Diamant2_FuelTank_nano_0625]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Nano" Fuel Tank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.625
+	}
+}
+
+@PART[_Knes_Diamant2_FuelTank_small_0625]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Baby" Fuel Tank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.625
+	}
+}
+
+@PART[_Knes_DiamantA_FuelTank_09375]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Flashy" Fuel Tank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+@PART[_Knes_DiamantBP4_Avionics_09375]:NEEDS[TweakScale]:FOR[Knes] // EREB-D "Blender" avionics
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+@PART[_Knes_DiamantBP4_Booster_Rita_09375]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Obelix" P4 Booster
+{
+	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+@PART[_Knes_DiamantB_Avionics_0625]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Administrator" avionics
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.625
+	}
+}
+
+@PART[_Knes_DiamantB_FuelTank_09375]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Bulky" Fuel Tank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+@PART[_Knes_Diamant_Aileron]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Iconoclast" Fin
+{
+	%MODULE[TweakScale]
+	{
+		type = free
+	}
+}
+
+@PART[_Knes_Diamant_Aileron_B]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Reactionary" Fin
+{
+	%MODULE[TweakScale]
+	{
+		type = free
+	}
+}
+
+@PART[_Knes_Diamant_Booster_P064_0625]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Mutineer" P064 Booster
+{
+	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.625
+	}
+}
+
+@PART[_Knes_Diamant_Decoupler_0625]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Fomenter" Decoupler
+{
+	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.625
+	}
+}
+
+@PART[_Knes_Diamant_Decoupler_09375]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Agitator" Decoupler
+{
+	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+@PART[_Knes_Diamant_Engine_09375]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Riotous" Engine
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+// Fairings do not work yet (uncomment to test)
+
+//@PART[_Knes_Diamant_Fairing_0625]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Assiduous" fairing
+//{
+//	%MODULE[TweakScale]
+//	{
+//		type = stack_square
+//		defaultScale = 0.625
+//	}
+//}
+
+//@PART[_Knes_Diamant_Fairing_09375]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Wallace" fairing
+//{
+//	%MODULE[TweakScale]
+//	{
+//		type = stack_square
+//		defaultScale = 0.9375
+//	}
+//}
+
+@PART[_Knes_Diamant_NoseCone_09375]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Hat" NoseCone
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+@PART[_Knes_H2_Engine_09375]:NEEDS[TweakScale]:FOR[Knes] // H2 "Crinkle" Cryogenic Engine
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+@PART[_Knes_H3_Engine_0625]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Olaf" Cryogenic Engine
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.625
+	}
+}
+
+@PART[_Knes_Nano_Cryo_FuelTank_09375]:NEEDS[TweakScale]:FOR[Knes] // C-09 "Vanilla" FuelTank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+@PART[_Knes_RCS_Bump_roll]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Astro" RCS
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = free
+	}
+}
+
+@PART[_Knes_RCS_Bump_tank]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Boop" MonoProp Fuel Tank
+{
+	%MODULE[TweakScale]
+	{
+		type = free
+	}
+}
+
+@PART[_Knes_Small_Cryo_FuelTank_09375]:NEEDS[TweakScale]:FOR[Knes] // M-09 "Pistache" FuelTank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+@PART[_Knes_Topaze_Booster_0625]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Insurgent" Booster
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.625
+	}
+}
+
