STEAM Station parts

--- a/GameData/Knes/Parts/ATV/_Knes_STEAM_ScienceLab.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_STEAM_ScienceLab.cfg
@@ -20,47 +20,12 @@ PART
 		scale = 1.0, -1.0, 1.0
 		position = 0.0, -1.96875, 0.0
 	}
-    MODEL
-	{
-		model = Knes/Parts/Core/EndCap/Knes_end_crew_s1
-		scale = 1.0, 1.0, 1.0
-		position = 0.0, 0.328125, -1.08253
-		rotation = -90, 0, 0		
-		name = end_crew_s1_1
-	}	
-    MODEL
-	{
-		model = Knes/Parts/Core/EndCap/Knes_end_crew_s1
-		scale = 1.0, 1.0, 1.0
-		position = -1.08253, 0.328125, 0.0
-		rotation = 0, 0, 90			
-		name = end_crew_s1_2			
-	}
-    MODEL
-	{
-		model = Knes/Parts/Core/EndCap/Knes_end_crew_s1
-		scale = 1.0, 1.0, 1.0
-		position = 0.0, 0.328125, 1.08253
-		rotation = 90, 0, 0			
-		name = end_crew_s1_3
-	}
-    MODEL
-	{
-		model = Knes/Parts/Core/EndCap/Knes_end_crew_s1
-		scale = 1.0, 1.0, 1.0
-		position = 1.08253, 0.328125, 0.0
-		rotation = 0, 0, -90			
-		name = end_crew_s1_4			
-	}	
+
 	
 	rescaleFactor = 1
 	
 	node_stack_top = 0.0, 1.96875, 0.0, 0, 1, 0, 1
-	node_stack_bottom = 0.0, -1.96875, 0.0, 0, -1, 0, 1	
-	node_stack_right = 1.08253, 0.328125, 0, 1, 0, 0, 1
-	node_stack_left = -1.08253, 0.328125, 0, -1, 0, 0, 1
-	node_stack_back = 0, 0.328125, 1.08253, 0, 0, 1, 1
-	node_stack_front = 0, 0.328125,-1.08253, 0, 0, -1, 1		
+	node_stack_bottom = 0.0, -1.96875, 0.0, 0, -1, 0, 1		
 		
 	TechRequired = advExploration
 	entryCost = 10400
@@ -82,7 +47,7 @@ PART
 	crashTolerance = 10
 	maxTemp = 1400
 	bulkheadProfiles = size2
-	tags =  Steam Science Knes
+	tags =  Steam Science Knes atv
 	vesselType = Ship
 	CrewCapacity = 2
 	
@@ -205,151 +170,5 @@ PART
 		name = ElectricCharge
 		amount = 250
 		maxAmount = 250
-	}
-	MODULE
-	{
-		name = ModulePartVariants
-		baseVariant = ScienceLab
-		VARIANT
-		{
-			name = ScienceLab
-			displayName = ScienceLab
-			primaryColor = #ffffff
-			secondaryColor = #999999			
-			GAMEOBJECTS
-			{
-				Cache_1 = false			
-				Cache_2 = false
-				Cache_3 = false
-				Cache_4 = false
-				Node_1 = false		
-				Node_2 = false
-				Node_3 = false
-				Node_4 = false
-				end_crew_s1_1 = false	
-				end_crew_s1_2 = false	
-				end_crew_s1_3 = false	
-				end_crew_s1_4 = false				
-				Node_Collider_1 = false	
-				Node_Collider_2 = false	
-				Node_Collider_3 = false	
-				Node_Module = false	
-				ScienceLab_Collider = true	
-				ScienceLab_Module = true					
-					
-			}				
-		}	
-		VARIANT
-		{
-			name = Node1
-			displayName = Node1
-			primaryColor = #ffffff
-			secondaryColor = #999999			
-			GAMEOBJECTS
-			{
-				Cache_1 = false			
-				Cache_2 = true
-				Cache_3 = true
-				Cache_4 = true
-				Node_1 = true		
-				Node_2 = false
-				Node_3 = false
-				Node_4 = false
-				end_crew_s1_1 = true	
-				end_crew_s1_2 = false	
-				end_crew_s1_3 = false	
-				end_crew_s1_4 = false				
-				Node_Collider_1 = true	
-				Node_Collider_2 = true	
-				Node_Collider_3 = true	
-				Node_Module = true	
-				ScienceLab_Collider = false	
-				ScienceLab_Module = false						
-			}			
-		}	
-		VARIANT
-		{
-			name = Node2
-			displayName = Node2
-			primaryColor = #ffffff
-			secondaryColor = #999999			
-			GAMEOBJECTS
-			{
-				Cache_1 = false			
-				Cache_2 = true
-				Cache_3 = false
-				Cache_4 = true
-				Node_1 = true		
-				Node_2 = false
-				Node_3 = true
-				Node_4 = false
-				end_crew_s1_1 = true	
-				end_crew_s1_2 = false	
-				end_crew_s1_3 = true	
-				end_crew_s1_4 = false				
-				Node_Collider_1 = true	
-				Node_Collider_2 = true	
-				Node_Collider_3 = true	
-				Node_Module = true	
-				ScienceLab_Collider = false	
-				ScienceLab_Module = false						
-			}				
-		}	
-		VARIANT
-		{
-			name = Node3
-			displayName = Node3
-			primaryColor = #ffffff
-			secondaryColor = #999999			
-			GAMEOBJECTS
-			{
-				Cache_1 = false			
-				Cache_2 = false
-				Cache_3 = false
-				Cache_4 = true
-				Node_1 = true		
-				Node_2 = true
-				Node_3 = true
-				Node_4 = false
-				end_crew_s1_1 = true	
-				end_crew_s1_2 = false	
-				end_crew_s1_3 = true	
-				end_crew_s1_4 = true				
-				Node_Collider_1 = true	
-				Node_Collider_2 = true	
-				Node_Collider_3 = true	
-				Node_Module = true	
-				ScienceLab_Collider = false	
-				ScienceLab_Module = false						
-			}				
-		}
-		VARIANT
-		{
-			name = Node4
-			displayName = Node4
-			primaryColor = #ffffff
-			secondaryColor = #999999			
-			GAMEOBJECTS
-			{
-				Cache_1 = false			
-				Cache_2 = false
-				Cache_3 = false
-				Cache_4 = false
-				Node_1 = true		
-				Node_2 = true
-				Node_3 = true
-				Node_4 = true
-				end_crew_s1_1 = true	
-				end_crew_s1_2 = true	
-				end_crew_s1_3 = true	
-				end_crew_s1_4 = true				
-				Node_Collider_1 = true	
-				Node_Collider_2 = true	
-				Node_Collider_3 = true	
-				Node_Module = true	
-				ScienceLab_Collider = false	
-				ScienceLab_Module = false										
-			}				
-		}			
 	}		
 }
