Adding patched for Launcher/L3S

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-Launcher_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-Launcher_TweakScale.cfg
@@ -397,3 +397,256 @@
 	}
 }
 
+
+// ** L35 *
+
+@PART[Knes_Command_Minus]:NEEDS[TweakScale]:FOR[Knes] // Probe Core "Minus" Avionics System
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+@PART[Knes_Engine_Zebulon]:NEEDS[TweakScale]:FOR[Knes] // HM7 "Zebulon" Liquid Fuel Engine
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.875
+	}
+}
+
+@PART[Knes_Fuel_Tanks_1875_H10]:NEEDS[TweakScale]:FOR[Knes] // H10 "Belenos" Fuel Tanks
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.875
+	}
+}
+
+@PART[_Knes_L3S_AR4_Avionics]:NEEDS[TweakScale]:FOR[Knes] // Probe Core AR4 "Baudry" Avionics System
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.875
+	}
+}
+
+@PART[_Knes_L3S_Avionics_250]:NEEDS[TweakScale]:FOR[Knes] // Probe Core "Hera" Avionics System
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+@PART[_Knes_L3S_Cryo_LH2_125]:NEEDS[TweakScale]:FOR[Knes] // HM4-125 FuelTank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.25
+	}
+}
+
+@PART[_Knes_L3S_Engine_Viking5]:NEEDS[TweakScale]:FOR[Knes] // L3S "Viking 5" Liquid Fuel Engine
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.875
+	}
+}
+
+@PART[_Knes_L3S_Fin]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Beauty" Fin
+{
+	%MODULE[TweakScale]
+	{
+		type = free
+	}
+}
+
+@PART[_Knes_L3S_H4]:NEEDS[TweakScale]:FOR[Knes] // H4 "Thor" Fuel Tanks
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+@PART[_Knes_L3S_H45]:NEEDS[TweakScale]:FOR[Knes] // H45 "BigBoi" Fuel Tanks
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+@PART[_Knes_L3S_H8]:NEEDS[TweakScale]:FOR[Knes] // H8 "Taranis" Fuel Tanks
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.875
+	}
+}
+
+@PART[_Knes_L3S_H8_Separatron]:NEEDS[TweakScale]:FOR[Knes] // 3S "Leprechaun" Separatron
+{
+	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = free
+	}
+}
+
+@PART[_Knes_L3S_HM4_Engine]:NEEDS[TweakScale]:FOR[Knes] // HM4 "Themis" Cryogenic Engine
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.625
+	}
+}
+
+@PART[_Knes_L3S_L140]:NEEDS[TweakScale]:FOR[Knes] // Ariane L-140 "Drakkar" Stage
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+@PART[_Knes_L3S_L220]:NEEDS[TweakScale]:FOR[Knes] // Ariane L-220 "Valkyrie" Stage
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+@PART[_Knes_L3S_L220N]:NEEDS[TweakScale]:FOR[Knes] // Ariane L-220 "Valkyrie" Stage
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+@PART[_Knes_L3S_L33]:NEEDS[TweakScale]:FOR[Knes] // L33 "Toutatis" Fuel Tanks
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.875
+	}
+}
+
+@PART[_Knes_L3S_L33_Engine]:NEEDS[TweakScale]:FOR[Knes] // L33 "Byrding" Liquid Fuel Engine
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.875
+	}
+}
+
+@PART[_Knes_L3S_L33_Separatron]:NEEDS[TweakScale]:FOR[Knes] // L3S "Lilliputian" Separatron
+{
+	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = free
+	}
+}
+
+@PART[_Knes_L3S_L3S_HM60_Engine]:NEEDS[TweakScale]:FOR[Knes] // HM60 "Themis" Liquid Fuel Engine
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+@PART[_Knes_L3S_PAL]:NEEDS[TweakScale]:FOR[Knes] // Ariane "Drako" PAL Booster
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+@PART[_Knes_L3S_PAP]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Pollux" PAP Booster
+{
+	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = free
+	}
+}
+
+@PART[_Knes_L3S_Separatron]:NEEDS[TweakScale]:FOR[Knes] // L3S "Goblin" Separatron
+{
+	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = free
+	}
+}
+
+@PART[_Knes_MonoProp_Engine_1]:NEEDS[TweakScale]:FOR[Knes] // Mk-61 "Themis" Monoprop Engine
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = free
+	}
+}
+
+@PART[_Knes_MonoProp_Engine_2]:NEEDS[TweakScale]:FOR[Knes] // Mk-31 "Artemis" Monoprop Engine
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = free
+	}
+}
+
+@PART[Knes_Hermes_Engine_Mk91]:NEEDS[TweakScale]:FOR[Knes] // Mk-91 "Callisto" Monoprop Engine
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = free
+	}
+}
+
+@PART[_Knes_RCS_3way]:NEEDS[TweakScale]:FOR[Knes] // Mk-61 "Zorg" RCS Pod
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = free
+	}
+}
