Adding patched for Launcher/Veronique

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-Launcher_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-Launcher_TweakScale.cfg
@@ -650,3 +650,43 @@
 		type = free
 	}
 }
+
+
+// ** Veronique *
+
+@PART[_Knes_Veronique_Aileron]:NEEDS[TweakScale]:FOR[Knes] // AGI-F "Fish" Fin
+{
+	%MODULE[TweakScale]
+	{
+		type = free_square
+	}
+}
+
+@PART[_Knes_Veronique_Decoupler_03125]:NEEDS[TweakScale]:FOR[Knes] // AGI-D "Loop" Decoupler
+{
+	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.3125
+	}
+}
+
+@PART[_Knes_Veronique_Engine_03125]:NEEDS[TweakScale]:FOR[Knes] // AGI-E "Vekin" Engine
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.3125
+	}
+}
+
+@PART[_Knes_Veronique_FuelTank_03125]:NEEDS[TweakScale]:FOR[Knes] // AGI-FT "Hope" FuelTank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.3125
+	}
+}
